[package]
name = "sludge"
version = "0.1.116"
edition = "2021"

[dependencies]
include_directory = { version = "0.1.1", optional = true }
hashmap_macro = "0.1.0"
macroquad = { version = "0.4.14", features = ["audio"] }
bincode = { version = "2.0.1", features = ["derive"] }

[features]
bundled = ["dep:include_directory"]
