[package]
name = "sludge"
version = "0.1.142"
edition = "2021"

[dependencies]
include_directory = { version = "0.1.1", optional = true }
hashmap_macro = "0.1.0"
macroquad = { version = "0.4.14", features = ["audio"] }
bincode = { version = "2.0.1", features = ["derive"] }

[features]
bundled = ["dep:include_directory"]

[target.'cfg(target_arch="wasm32")'.dependencies]
base64 = "0.22.1"
quad-storage = "0.1.3"
sapp-jsutils = { version = "0.1" }
